log
do.,  8 de may. de 2022 16:17:26: 
 heap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
38d038e
do.,  8 de may. de 2022 16:18:05: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
ef74298
do.,  8 de may. de 2022 16:18:29: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|3
total_score: 10/70
6f2c977
do.,  8 de may. de 2022 16:21:00: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function 'heap_top':
heap.c:21:24: error: incompatible types when returning type 'heapElem {aka struct nodo}' but 'void *' was expected
    return pq->heapArray[0];
           ~~~~~~~~~~~~~^~~
heap.c:22:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
6153baf
do.,  8 de may. de 2022 16:21:35: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function 'heap_top':
heap.c:21:27: error: return makes pointer from integer without a cast [-Werror=int-conversion]
    return pq->heapArray[0].priority;
           ~~~~~~~~~~~~~~~~^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
68df576
do.,  8 de may. de 2022 16:22:13: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
c686062
do.,  8 de may. de 2022 16:23:03: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
93497c2
do.,  8 de may. de 2022 16:24:01: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|2
total_score: 20/70
108b650
